# latent-booking

./: package.json  pnpm-lock.yaml
apps/http-backend/: package.json  tsconfig.json
apps/http-backend/src/: config.ts  index.ts  types.ts
apps/http-backend/src/controllers/: events.ts
apps/http-backend/src/controllers/test/: index.ts
apps/http-backend/src/middleware/: admin.ts  index.ts  superadmin.ts  user.ts
apps/http-backend/src/routes/v1/: index.ts  user.ts
apps/http-backend/src/utils/: totp.ts  twilio.ts
apps/user-fe/: package.json  tailwind.config.ts  tsconfig.json
apps/user-fe/app/: globals.css  layout.tsx  page.tsx
apps/user-fe/app/(legal)/privacy/: page.tsx
apps/user-fe/app/(legal)/terms/: page.tsx
apps/user-fe/app/_common/: footer.tsx  navbar.tsx
apps/user-fe/app/_components/: example-dialog.tsx
apps/user-fe/app/_components/home/: episodeCard.tsx  (+10 more)
apps/user-fe/app/assets/: index.ts
apps/user-fe/app/episodes/: page.tsx
apps/user-fe/app/lib/: fonts.ts
apps/user-fe/app/stars-of-latent/: page.tsx
apps/worker/: package.json
apps/worker/src/: index.ts
latent-backend/: Cargo.toml
latent-backend/api/: .env.example  Cargo.toml  test.sh
latent-backend/api/src/: error.rs  main.rs
latent-backend/api/src/routes/: user.rs
latent-backend/api/src/services/: totp.rs
latent-backend/api/src/utils/: mod.rs  totp.rs  twilio.rs
latent-backend/db/: Cargo.toml
latent-backend/db/migrations/: 20240124_init.sql  20250119002058_create_users_table.sql  20250119004621_create_users_table.sql
latent-backend/db/src/: config.rs  lib.rs  user.rs
(+28 files in other folders)
