[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
dotenv = "0.15.0"
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
serde = "1.0.217"
serde_json = "1.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
reqwest = { version = "0.11.13", features = ["json"] }
env_logger = "0.10"
log = "0.4"
sha2 = "0.10"