[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "tls-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15.0"
log = "0.4"
